Added login route
generates jwt token in which we store user id and its role
